# rust-learning

./: .dprint.json  .gitignore
CR/day1/arrays_and_for_loops/: Cargo.toml
CR/day1/bonus1/: Cargo.toml
CR/day1/copying/: Cargo.toml
CR/day1/implicit_conversions/: Cargo.toml
CR/day1/stack_memory/: Cargo.toml
CR/day2/destructuring/: Cargo.toml
CR/day2/person/: Cargo.toml
CR/day2/prefix_match/: Cargo.toml
CR/day4/async-await/: Cargo.toml
CR/day4/async-t/: Cargo.toml
CR/day4/blocks/: Cargo.toml
CR/day4/channels/: Cargo.toml
CR/day4/elevator/: Cargo.toml
CR/day4/joins/: Cargo.toml
Ex/fullstack-todo-rust/data/: .env  Cargo.toml
Ex/fullstack-todo-rust/data/src/: lib.rs
Ex/fullstack-todo-rust/data/src/database/: mod.rs  prelude.rs  tasks.rs  users.rs
Ex/fullstack-todo-rust/data/src/routes/: create_task.rs  mod.rs
Ex/fullstack-todo-rust/routing/: Cargo.toml
Ex/fullstack-todo-rust/routing/src/: lib.rs
Ex/fullstack-todo-rust/routing/src/routes/: get_json.rs  mirror_custom_header.rs  mirror_user_agent.rs  mod.rs  returns_201.rs  set_middleware_custom_header.rs
Ex/tokio-chat/: Cargo.toml
RIA/ch02/: ch2-first-steps  ch2-first-steps.rs  ch2-intro-to-numbers  ch2-intro-to-numbers.rs  ch2-match-needles  ch2-non-base2  ch2-non-base2.rs  ch2-while-true-incr-count  ch2-while-true-incr-count.rs
RIA/ch03/: ch3-not-quite-file-1.rs
RIA/ch04/: ch4-check-sats-1  ch4-check-sats-1.rs  ch4-rc-refcell-groundstation  ch4-rc-refcell-groundstation.rs
TOKIO/my-redis/: Cargo.toml
TOKIO/say-world/: Cargo.toml
WASM/wasm-game-of-life/: Cargo.toml  LICENSE_MIT
(+144 files in other folders)
