[package]
name = "data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.29.1", features = ["full"] }
