[package]
name = "routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
serde = { version = "1.0.167", features = ["derive"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.1", features = ["cors"] }
